# Design-Patterns

./: CMakeLists.txt
Creational/: abstract_factory.cpp  builder.cpp  factory_method.cpp  prototype.cpp  singleton.cpp
Estructurales/: Composite.cpp  Decorator.cpp  Flyweight.cpp  adapter.cpp  bridge.cpp
